# FastAPI_helloworld

./: README.md  pyproject.toml
fast/: main.py
tests/: test_main.py
